kubernetes/overlays/kind/kust.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    od.io/overlay: kind
    od.io/provisioner: kustomize
  name: mutating-webhook-service
  namespace: default
spec:
  ports:
  - port: 443
    targetPort: 8443
  selector:
    component: mutating-webhook-server
    od.io/overlay: kind
    od.io/provisioner: kustomize
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    od.io/overlay: kind
    od.io/provisioner: kustomize
  name: mutating-webhook-server
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      component: mutating-webhook-server
      od.io/overlay: kind
      od.io/provisioner: kustomize
  template:
    metadata:
      labels:
        component: mutating-webhook-server
        od.io/overlay: kind
        od.io/provisioner: kustomize
    spec:
      containers:
      - image: smithaj/sidecar:1
        name: mutating-webhook-server
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  labels:
    od.io/overlay: kind
    od.io/provisioner: kustomize
  name: mutating-webhook
webhooks:
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUdCRENDQSt5Z0F3SUJBZ0lKQUp2QUJKc1RPRkFsTUEwR0NTcUdTSWIzRFFFQkN3VUFNSUdXTVFzd0NRWUQKVlFRR0V3SkVSVEVQTUEwR0ExVUVDQXdHUW1WeWJHbHVNUkF3RGdZRFZRUUhEQWRDWlhKc2FXNGdNUkF3RGdZRApWUVFLREFkQklGTnRhWFJvTVF3d0NnWURWUVFMREFOUVNVSXhGakFVQmdOVkJBTU1EU291WkdWbVlYVnNkQzV6CmRtTXhMREFxQmdrcWhraUc5dzBCQ1FFV0hYTnRhWFJvWVdwQVlXcHphWFF1YjI1dFkybHliM052Wm5RdVkyOXQKTUI0WERUSXhNRGt4TXpFek1UazBObG9YRFRJME1EY3dNekV6TVRrME5sb3dnWll4Q3pBSkJnTlZCQVlUQWtSRgpNUTh3RFFZRFZRUU [...]
    service:
      name: mutating-webhook
      namespace: default
      path: /mutate
  failurePolicy: Fail
  name: mutating-webhook.default.svc
  objectSelector:
    matchLabels:
      foo: bar
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    resources:
    - pods
  sideEffects: None
